# petscCFD

./: CMakeLists.txt  README.md
data/: blast_100.msh  blast_200.msh  box.msh  bubble_100.msh  large.msh  medium.msh  path.hpp.in  periodic.msh  periodic_100.msh  periodic_200.msh  quad.msh  quad_test.msh  shock_100.msh  shock_200.msh  stage_40.msh  stage_80.msh  tri_test.msh  tube_100.msh  tube_200.msh
demo/: CMakeLists.txt  bubble.cpp  main.cpp  periodic.cpp  shock.cpp  stage.cpp  tube.cpp
include/: bndConds.hpp  defs.h  defs.hpp  edgeTools.hpp  euler.hpp  physModel.hpp  solver.hpp  spaceDiscr.hpp  timeDiscr.hpp  vrApproach.hpp
include/geometry/: element.hpp  mesh.hpp  quadrature.hpp
test/: CMakeLists.txt
test/algebra/: CMakeLists.txt  algebra.cpp
test/flux/: CMakeLists.txt  riemann.cpp
test/geometry/: CMakeLists.txt  cell.cpp  edge.cpp  mesh.cpp
